2013-11-06  David S. Miller  <davem@davemloft.net>

	[BZ #15985]
	* sysdeps/sparc/sparc32/fpu/s_fdim.S (__fdim): Do not use fnegd
	on pre-v9 cpus, use a fnegs+fmovs sequence instead.

2013-09-06  David S. Miller  <davem@davemloft.net>

	* po/zh_TW.po: Update Chinese (traditional) translation from
	translation project.

2013-08-22  David S. Miller  <davem@davemloft.net>

	* po/ca.po: Update Catalan translation from translation project.
	* po/uk.po: Add Ukrainian translations from translation project.

2013-08-03  David S. Miller  <davem@davemloft.net>

	* po/ko.po: Update Korean translation from translation project.

2013-08-01  David S. Miller  <davem@davemloft.net>

	* manual/contrib.texi: Update entry for Siddhesh Poyarekar.  Add
	entries for Will Newton, Andi Kleen, David Holsgrove, and Ondrej
	Bilka.

2013-07-30  David S. Miller  <davem@davemloft.net>

	* po/fr.po: Update French translation from translation project.

2013-07-28  David S. Miller  <davem@davemloft.net>

	* po/cs.po: Update Czech translation from translation project.

	* po/sv.po: Update Swedish translation from translation project.

2013-07-27  David S. Miller  <davem@davemloft.net>

	* po/eo.po: Update Esperanto translation from translation project.

	* po/vi.po: Update Vietnamese translation from translation project.

	* po/de.po: Update German translation from translation project.

2013-07-26  David S. Miller  <davem@davemloft.net>

	* po/bg.po: Update Bulgarian translation from translation project.

	* po/nl.po: Update Dutch translation from translation project.
	* po/pl.po: Update Polish translation from translation project.
	* po/ru.po: Update Russian translation from translation project.

2013-07-24  David S. Miller  <davem@davemloft.net>

	* po/libc.pot: Update.

2013-07-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/dl-static.c: New file to support
	variable page size.
	* sysdeps/unix/sysv/linux/powerpc/ldsodefs.h: Likewise.